Added the hover feature of the buttons, fixed the size of social buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,11 +48,19 @@ body {
   gap: 24px; 
   align-self: stretch;
 }
-
+.contact_button:hover{
+  background-color: #3730a3;
+}
 .iconRow {
   display: flex; 
   justify-content: center;
-  /* gap: 16px; */
   align-self: stretch; 
 }
 
+.icon:hover {
+  background-color: #fafafa;
+}
+
+.icon {
+  border-radius: 4px;
+}
